--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "yup": "^1.3.3"
   }
 }
