--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/mime-types": "^2.1.4",
+    "@types/multer": "^1.4.11",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mime-types": "^2.1.35",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "yup": "^1.3.3"
   }
 }
