--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A small application to manipulate files using Node.JS | Express.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
@@ -13,11 +13,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/babel__generator": "^7.6.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.13",
+    "babel-jest": "^29.7.0",
     "dotenv": "^16.4.1",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "nodemon": "^3.0.3",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
@@ -34,3 +40,4 @@
     "yup": "^1.3.3"
   }
 }
+
